<!--
  ~ Created by Mystery0 on 17-12-26 下午11:29.
  ~ Copyright (c) 2017. All Rights reserved.
  ~
  ~ Last modified 17-10-12 下午6:45
  -->

<resources>
    <string name="app_name">ToolsDemo</string>
    <string name="float_menu">FloatMenu</string>
    <string name="picture_chooser">PictureChooser</string>
    <string name="m_spinner">Spinner</string>
    <string name="sendHttp">SendHttp</string>
    <string name="sendHttpGetJson">SendHttpGetJson</string>
    <string name="testLog">TestLog</string>
    <string name="testCrash">TestCrash</string>
    <string name="testImageLoader">testImageLoader</string>
    <string name="sendFileHttp">sendFileHttp</string>
    <string name="downloadFile">DownloadFile</string>
    <string name="testDirManager">testDirManager</string>
    <string name="testHeaderPage">testHeaderPage</string>
    <string name="long_text">
        讲述了天才少年萧炎在创造了家族空前绝后的修炼纪录后突然成了废人，种种打击接踵而至。就在他即将绝望的时候，一缕灵魂从他手上的戒指里浮现，一扇全新的大门在面前开启，经过艰苦修炼最终成就辉煌的故事。
这里是属于斗气的世界，没有花俏艳丽的魔法，有的，仅仅是繁衍到巅峰的斗气！
    萧炎，主人公，萧家历史上空前绝后的斗气修炼天才。4岁就开始修炼斗之气，10岁拥有了九段斗之气，11岁突破十段斗之气，一跃成为家族百年来最年轻的斗者。然而在12岁那年，他却“丧失”了修炼能力，只拥有三段斗之气。整整三年时间，家族冷落，旁人轻视，被未婚妻退婚……种种打击接踵而至。
就在他即将绝望的时候，一缕灵魂从他手上的戒指里浮现，一扇全新的大门在面前开启！萧炎重新成为家族年轻一辈中的佼佼者，受到众人的仰慕，他却不满足于此。为了一雪退婚带来的耻辱，萧炎来到了魔兽山脉，在药老的帮助下，为了进一步提升自己的修为，在魔兽山脉，他结识了小医仙，云芝（云岚宗宗主云韵）等人，他发现自己面向的世界更加宽广了。
三十年河东，三十年河西，莫欺少年穷！ 年仅15岁的萧家废物，于此地，立下了誓言，从今以后便一步步走向斗气大陆巅峰！
经历了一系列的磨练，收异火，寻宝物，炼丹药，斗魂族。
最终成为斗帝，前往大千世界....
萧炎
主人公。天资卓越，毅力惊人。4岁练气，10岁拥有九段斗之气，11岁成功凝聚斗之气旋，一跃成为家族百年之内最年轻的斗者。然而却从12岁那年开始萧炎连续三年莫名其妙地退化成斗之气三段，从此逐渐沦为遭人白眼的废柴。之后得知原因竟是有一个神秘的灵魂“药老”藏在萧炎母亲的遗物戒指中不断吸收他的斗之气，在药老停止吸收斗之气并答应帮他重展天资后，一年时间内突破至斗之气七段，震惊全城。后来萧炎踏上了修炼之旅，以他的执着与信念闯荡大陆，一路历经坎坷，向着巅峰强者之途迈进，最终收服天下万火，成为万火之帝，号"炎帝"。与“魂天帝”展开“双帝之战”后以牺牲肉身为代价将其封印，还斗气大陆和平安定。为了寻找斗气大陆斗帝失踪之谜，进入大千世界，创立“无尽火域”。大千盟约大战中以超脱圣品，现已在苍穹榜上留下完整姓名，晋级主宰境。
药尘
男主之一，极为重要的人物，萧炎的老师。人称药老、药尊者，后称“药圣”，拥有“骨灵冷火”（后赠与萧炎）。星陨阁从未露面的阁主，初始为九星斗尊巅峰强者，后突破至斗圣，九品宝丹炼药师。当年其地位在现丹塔三巨头之上，因遭叛徒韩枫出卖而落难成为灵魂状态，潜伏于萧炎的戒指中，在吸收萧炎三年斗之气后恢复意识。之后药尘一路帮助萧炎成长，将毕生斗技和炼药术倾囊相授，多次救萧炎于危难之中，成为萧炎一生中最敬重的老师。后来经萧炎炼制斗尊强者骨骸外加造化圣者手臂骨而复活，其实力提升至半圣，在服用了萧炎带回来的黄泉妖圣精血后晋阶成一星斗圣。原远古八族中药族被抛弃的族人，后来因药典，获得返回族中的机会，但药老却选择拒绝，只要求将父母之名刻在宗族碑上。在《大主宰》中药尘也随萧炎来到大千世界。
萧薰儿（古薰儿）
萧炎的两位妻子之一，清纯可人，高傲冷漠。古族的大小姐，自小在萧家长大，与萧炎无血缘关系，其父亲为了给她一个安静的童年，将她送往萧家，并命她暗中查询萧家“陀舍古帝玉”的下落并暗中夺得。因儿时身体虚弱，两年里，萧炎坚持每晚用斗气为其温养身体而俘获芳心。在萧炎被视为废物的三年里从未放弃他，自始至终相信萧炎会成为超越巅峰的强者。一直鼓励萧炎并且尽自己最大可能地帮助他，萧炎也因为薰儿的不离不弃而被感动。
其身份背景为古族族长千金，是古族难得神品血脉拥有者，天赋异禀，拥有异火“金帝焚天炎”，依靠传承的斗帝血脉和古族家族力量实力暴涨得很快。先在迦蓝学院等萧炎两年，后又为保护萧炎而返回古界。在得知萧炎踏足中州时，第一时间前往与萧炎相见，并于冰河谷谷主与魂殿尊者手中救下萧炎和天火尊者等人。后因家族原因，又不得不离开。当主角在达到斗尊五星之时前往古界，两人终于再次相见，并获得其父的默许。
在古界进入古墓后，和萧炎在天墓里共同度过三年时光，并在萧玄的要求下献出其精血助主角获得血脉之力。后与萧炎一同前往菩提古树，得到菩提心。在萧炎炼化“净莲妖火”时，自愿失身于萧炎从而分得了实力，后突破至四星斗圣。双帝之战后，三人举办了一场盛大的婚礼那次的婚礼，有着天地以及无数人的见证。续集“五帝破空”中，在萧炎打开位面让源气回到斗气大陆后古薰儿突破后与萧炎和美杜莎女王一起进入大千世界。大结局时和主角生有一子，名为萧霖。
    </string>
</resources>
