<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mystery0.toolsdemo.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/float_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/float_menu"/>

        <Button
            android:id="@+id/picture_chooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/picture_chooser"/>

        <Button
            android:id="@+id/m_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m_spinner"/>

        <Button
            android:id="@+id/sendHttp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendHttp"/>

        <Button
            android:id="@+id/sendHttpGetJson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendHttpGetJson"/>

        <Button
            android:id="@+id/sendFileHttp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendfilehttp"/>

        <Button
            android:id="@+id/testLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/testLog"/>

        <Button
            android:id="@+id/testCrash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/testCrash"/>

        <Button
            android:id="@+id/testImageLoader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/testimageloader"/>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
    
